Bug 638106 - CKEditor document should be editable, r=davidb, a=final+